--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
         "@astrojs/node": "^9.0.0",
         "@astrojs/solid-js": "^5.0.0",
         "@astrojs/tailwind": "^5.1.3",
-        "@glowman554/base-components": "^1.0.8",
+        "@glowman554/base-components": "^1.0.9",
         "@libsql/client": "^0.14.0",
         "@node-rs/bcrypt": "^1.10.7",
         "astro": "^5.0.5",
         "drizzle-orm": "^0.38.0",
         "solid-js": "^1.9.3",
         "tailwindcss": "^3.4.17",
+        "uuid": "^11.0.3",
         "zod": "^3.24.1"
     },
     "devDependencies": {
